// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-pagination> Component Basic usage 1`] = `
<bolt-pagination total="10"
                 current="5"
>
  <nav class="c-bolt-pagination c-bolt-pagination--align-center"
       role="navigation"
       aria-label="Pagination Navigation"
  >
    <a href="#!"
       class="c-bolt-pagination__item c-bolt-pagination__item--prev"
    >
      <span class="c-bolt-pagination__icon">
        <svg class="e-bolt-icon e-bolt-icon--small"
             aria-hidden="true"
             enable-background="new 0 0 32 32"
             viewbox="0 0 32 32"
             xmlns="http://www.w3.org/2000/svg"
        >
          <path clip-rule="evenodd"
                d="m20.2 28.5c.7.7 1.9.7 2.6 0s.7-1.9 0-2.6l-9.7-9.9 9.8-9.8c.7-.7.7-1.9 0-2.6-.4-.4-.9-.6-1.3-.6-.5 0-1 .2-1.3.6l-11.2 11.1c-.7.7-.7 1.9 0 2.6z"
                fill="#151619"
                fill-rule="evenodd"
          >
          </path>
        </svg>
      </span>
      <span class="c-bolt-pagination__text">
        Previous
      </span>
    </a>
    <a href="#!"
       class="c-bolt-pagination__item"
    >
      <span class="c-bolt-pagination__text">
        <span class="u-bolt-visuallyhidden">
          Navigate to first page
        </span>
        1
      </span>
    </a>
    <span class="c-bolt-pagination__item c-bolt-pagination__item--ellipsis"
          role="presentation"
    >
      &hellip;
    </span>
    <a href="#!"
       class="c-bolt-pagination__item"
    >
      <span class="c-bolt-pagination__text">
        <span class="u-bolt-visuallyhidden">
          Navigate to page
        </span>
        3
      </span>
    </a>
    <a href="#!"
       class="c-bolt-pagination__item"
    >
      <span class="c-bolt-pagination__text">
        <span class="u-bolt-visuallyhidden">
          Navigate to page
        </span>
        4
      </span>
    </a>
    <span class="c-bolt-pagination__item is-current"
          aria-current="true"
    >
      <span class="c-bolt-pagination__text">
        <span class="u-bolt-visuallyhidden">
          You are currently on page
        </span>
        5
      </span>
    </span>
    <a href="#!"
       class="c-bolt-pagination__item"
    >
      <span class="c-bolt-pagination__text">
        <span class="u-bolt-visuallyhidden">
          Navigate to page
        </span>
        6
      </span>
    </a>
    <a href="#!"
       class="c-bolt-pagination__item"
    >
      <span class="c-bolt-pagination__text">
        <span class="u-bolt-visuallyhidden">
          Navigate to page
        </span>
        7
      </span>
    </a>
    <span class="c-bolt-pagination__item c-bolt-pagination__item--ellipsis"
          role="presentation"
    >
      &hellip;
    </span>
    <a href="#!"
       class="c-bolt-pagination__item"
    >
      <span class="c-bolt-pagination__text">
        <span class="u-bolt-visuallyhidden">
          Navigate to last page
        </span>
        10
      </span>
    </a>
    <a href="#!"
       class="c-bolt-pagination__item c-bolt-pagination__item--next"
    >
      <span class="c-bolt-pagination__text">
        Next
      </span>
      <span class="c-bolt-pagination__icon">
        <svg class="e-bolt-icon e-bolt-icon--small"
             aria-hidden="true"
             enable-background="new 0 0 32 32"
             viewbox="0 0 32 32"
             xmlns="http://www.w3.org/2000/svg"
        >
          <path clip-rule="evenodd"
                d="m11.8 3.5c-.7-.7-1.9-.7-2.6 0s-.8 1.9-.1 2.7l9.9 9.8-9.8 9.8c-.7.7-.7 1.9 0 2.6.3.4.8.6 1.2.6.5 0 1-.2 1.3-.6l11.1-11.1c.7-.7.7-1.9 0-2.6z"
                fill="#151619"
                fill-rule="evenodd"
          >
          </path>
        </svg>
      </span>
    </a>
  </nav>
</bolt-pagination>
`;

exports[`<bolt-pagination> Component Horizontal alignment: center 1`] = `
<bolt-pagination total="5"
                 current="1"
>
  <nav class="c-bolt-pagination c-bolt-pagination--align-center"
       role="navigation"
       aria-label="Pagination Navigation"
  >
    <span class="c-bolt-pagination__item is-current"
          aria-current="true"
    >
      <span class="c-bolt-pagination__text">
        <span class="u-bolt-visuallyhidden">
          You are currently on page
        </span>
        1
      </span>
    </span>
    <a href="#!"
       class="c-bolt-pagination__item"
    >
      <span class="c-bolt-pagination__text">
        <span class="u-bolt-visuallyhidden">
          Navigate to page
        </span>
        2
      </span>
    </a>
    <a href="#!"
       class="c-bolt-pagination__item"
    >
      <span class="c-bolt-pagination__text">
        <span class="u-bolt-visuallyhidden">
          Navigate to page
        </span>
        3
      </span>
    </a>
    <a href="#!"
       class="c-bolt-pagination__item"
    >
      <span class="c-bolt-pagination__text">
        <span class="u-bolt-visuallyhidden">
          Navigate to page
        </span>
        4
      </span>
    </a>
    <a href="#!"
       class="c-bolt-pagination__item"
    >
      <span class="c-bolt-pagination__text">
        <span class="u-bolt-visuallyhidden">
          Navigate to page
        </span>
        5
      </span>
    </a>
    <a href="#!"
       class="c-bolt-pagination__item c-bolt-pagination__item--next"
    >
      <span class="c-bolt-pagination__text">
        Next
      </span>
      <span class="c-bolt-pagination__icon">
        <svg class="e-bolt-icon e-bolt-icon--small"
             aria-hidden="true"
             enable-background="new 0 0 32 32"
             viewbox="0 0 32 32"
             xmlns="http://www.w3.org/2000/svg"
        >
          <path clip-rule="evenodd"
                d="m11.8 3.5c-.7-.7-1.9-.7-2.6 0s-.8 1.9-.1 2.7l9.9 9.8-9.8 9.8c-.7.7-.7 1.9 0 2.6.3.4.8.6 1.2.6.5 0 1-.2 1.3-.6l11.1-11.1c.7-.7.7-1.9 0-2.6z"
                fill="#151619"
                fill-rule="evenodd"
          >
          </path>
        </svg>
      </span>
    </a>
  </nav>
</bolt-pagination>
`;

exports[`<bolt-pagination> Component Horizontal alignment: end 1`] = `
<bolt-pagination total="5"
                 current="1"
>
  <nav class="c-bolt-pagination c-bolt-pagination--align-end"
       role="navigation"
       aria-label="Pagination Navigation"
  >
    <span class="c-bolt-pagination__item is-current"
          aria-current="true"
    >
      <span class="c-bolt-pagination__text">
        <span class="u-bolt-visuallyhidden">
          You are currently on page
        </span>
        1
      </span>
    </span>
    <a href="#!"
       class="c-bolt-pagination__item"
    >
      <span class="c-bolt-pagination__text">
        <span class="u-bolt-visuallyhidden">
          Navigate to page
        </span>
        2
      </span>
    </a>
    <a href="#!"
       class="c-bolt-pagination__item"
    >
      <span class="c-bolt-pagination__text">
        <span class="u-bolt-visuallyhidden">
          Navigate to page
        </span>
        3
      </span>
    </a>
    <a href="#!"
       class="c-bolt-pagination__item"
    >
      <span class="c-bolt-pagination__text">
        <span class="u-bolt-visuallyhidden">
          Navigate to page
        </span>
        4
      </span>
    </a>
    <a href="#!"
       class="c-bolt-pagination__item"
    >
      <span class="c-bolt-pagination__text">
        <span class="u-bolt-visuallyhidden">
          Navigate to page
        </span>
        5
      </span>
    </a>
    <a href="#!"
       class="c-bolt-pagination__item c-bolt-pagination__item--next"
    >
      <span class="c-bolt-pagination__text">
        Next
      </span>
      <span class="c-bolt-pagination__icon">
        <svg class="e-bolt-icon e-bolt-icon--small"
             aria-hidden="true"
             enable-background="new 0 0 32 32"
             viewbox="0 0 32 32"
             xmlns="http://www.w3.org/2000/svg"
        >
          <path clip-rule="evenodd"
                d="m11.8 3.5c-.7-.7-1.9-.7-2.6 0s-.8 1.9-.1 2.7l9.9 9.8-9.8 9.8c-.7.7-.7 1.9 0 2.6.3.4.8.6 1.2.6.5 0 1-.2 1.3-.6l11.1-11.1c.7-.7.7-1.9 0-2.6z"
                fill="#151619"
                fill-rule="evenodd"
          >
          </path>
        </svg>
      </span>
    </a>
  </nav>
</bolt-pagination>
`;

exports[`<bolt-pagination> Component Horizontal alignment: start 1`] = `
<bolt-pagination total="5"
                 current="1"
>
  <nav class="c-bolt-pagination c-bolt-pagination--align-start"
       role="navigation"
       aria-label="Pagination Navigation"
  >
    <span class="c-bolt-pagination__item is-current"
          aria-current="true"
    >
      <span class="c-bolt-pagination__text">
        <span class="u-bolt-visuallyhidden">
          You are currently on page
        </span>
        1
      </span>
    </span>
    <a href="#!"
       class="c-bolt-pagination__item"
    >
      <span class="c-bolt-pagination__text">
        <span class="u-bolt-visuallyhidden">
          Navigate to page
        </span>
        2
      </span>
    </a>
    <a href="#!"
       class="c-bolt-pagination__item"
    >
      <span class="c-bolt-pagination__text">
        <span class="u-bolt-visuallyhidden">
          Navigate to page
        </span>
        3
      </span>
    </a>
    <a href="#!"
       class="c-bolt-pagination__item"
    >
      <span class="c-bolt-pagination__text">
        <span class="u-bolt-visuallyhidden">
          Navigate to page
        </span>
        4
      </span>
    </a>
    <a href="#!"
       class="c-bolt-pagination__item"
    >
      <span class="c-bolt-pagination__text">
        <span class="u-bolt-visuallyhidden">
          Navigate to page
        </span>
        5
      </span>
    </a>
    <a href="#!"
       class="c-bolt-pagination__item c-bolt-pagination__item--next"
    >
      <span class="c-bolt-pagination__text">
        Next
      </span>
      <span class="c-bolt-pagination__icon">
        <svg class="e-bolt-icon e-bolt-icon--small"
             aria-hidden="true"
             enable-background="new 0 0 32 32"
             viewbox="0 0 32 32"
             xmlns="http://www.w3.org/2000/svg"
        >
          <path clip-rule="evenodd"
                d="m11.8 3.5c-.7-.7-1.9-.7-2.6 0s-.8 1.9-.1 2.7l9.9 9.8-9.8 9.8c-.7.7-.7 1.9 0 2.6.3.4.8.6 1.2.6.5 0 1-.2 1.3-.6l11.1-11.1c.7-.7.7-1.9 0-2.6z"
                fill="#151619"
                fill-rule="evenodd"
          >
          </path>
        </svg>
      </span>
    </a>
  </nav>
</bolt-pagination>
`;
